final 2 frm ash

--- a/index.htm
+++ b/index.htm
@@ -113,13 +113,15 @@
   </div>
 
   
-    <div class="carousel-text-content">
-    <p class="carousel-price">$4500</p>
-    <p class="carousel-offer">Take 20% off for a limited time.<br>Use Code: <strong>LOVE20</strong></p>
   
 </section>
+
+<div class="carousel-text-content">
+<p class="carousel-price">$4500</p>
+<p class="carousel-offer">Take 20% off for a limited time.<br>Use Code: <strong>LOVE20</strong></p>
+
+<button class="carousel_1_view_details_btn">View Details</button>
 </div>
-            
         </div>
 </div>
 <!-- ------------- hero main 2222222222222222 --------------vvvvvv -->
